// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`digest — model snapshot > richDay 1`] = `
[
  {
    "blocks": [
      {
        "kind": "para",
        "text": "26 July 2026 closed at 3pm. 3,825 units moved and we cannot place 78 of them. Another 305 are on the floor but written up wrong.",
      },
    ],
    "id": "opening",
  },
  {
    "blocks": [
      {
        "columns": [
          {
            "label": "City",
          },
          {
            "align": "right",
            "label": "Units moved",
          },
          {
            "align": "right",
            "label": "At risk",
          },
          {
            "label": "vs last week",
          },
          {
            "label": "Guard register",
          },
        ],
        "kind": "table",
        "rows": [
          [
            {
              "text": "Delhi",
              "tone": undefined,
            },
            {
              "align": "right",
              "text": "1,204",
            },
            {
              "align": "right",
              "strong": true,
              "text": "34",
              "tone": "danger",
            },
            {
              "text": "—",
              "tone": "muted",
            },
            {
              "text": "Received",
              "tone": "muted",
            },
          ],
          [
            {
              "text": "Bangalore",
              "tone": undefined,
            },
            {
              "align": "right",
              "text": "861",
            },
            {
              "align": "right",
              "strong": true,
              "text": "22",
              "tone": "danger",
            },
            {
              "text": "—",
              "tone": "muted",
            },
            {
              "text": "Not received",
              "tone": "danger",
            },
          ],
          [
            {
              "text": "Mumbai",
              "tone": undefined,
            },
            {
              "align": "right",
              "text": "742",
            },
            {
              "align": "right",
              "strong": true,
              "text": "12",
              "tone": "danger",
            },
            {
              "text": "—",
              "tone": "muted",
            },
            {
              "text": "Not read yet",
              "tone": "warn",
            },
          ],
          [
            {
              "text": "Pune",
              "tone": undefined,
            },
            {
              "align": "right",
              "text": "520",
            },
            {
              "align": "right",
              "strong": true,
              "text": "6",
              "tone": "danger",
            },
            {
              "text": "—",
              "tone": "muted",
            },
            {
              "text": "Received",
              "tone": "muted",
            },
          ],
          [
            {
              "text": "Hyderabad",
              "tone": undefined,
            },
            {
              "align": "right",
              "text": "498",
            },
            {
              "align": "right",
              "strong": true,
              "text": "4",
              "tone": "danger",
            },
            {
              "text": "—",
              "tone": "muted",
            },
            {
              "text": "Unreadable",
              "tone": "danger",
            },
          ],
        ],
      },
    ],
    "id": "cities",
    "title": "2 · At risk, by city",
  },
  {
    "blocks": [
      {
        "items": [
          {
            "sub": "Warehouse team",
            "text": "System-Only Entry — 56 units (Delhi 31, Bangalore 25). Odoo booked a customer movement today that nobody at the gate, on the sheet or in the app saw. Confirm the unit moved, or cancel the Odoo entry.",
            "tone": "danger",
          },
          {
            "sub": "Warehouse team",
            "text": "Off-System Movement — 11 units (Delhi 7, Mumbai 4). Trace the unit, then record it on the sheet, the app and Odoo.",
            "tone": "danger",
          },
          {
            "sub": "Ops team",
            "text": "Unclosed Return — 6 units (Pune 4). Find the unit and write it into the inward register.",
            "tone": "danger",
          },
          {
            "sub": "Ops team",
            "text": "Ghost Dispatch — 3 units (Mumbai 3). Establish whether the unit left, then correct the record that is wrong.",
            "tone": "danger",
          },
        ],
        "kind": "list",
      },
      {
        "kind": "para",
        "text": "+2 more jobs, all on the dashboard.",
        "tone": "muted",
      },
    ],
    "id": "actions",
    "title": "Do this today",
  },
  {
    "blocks": [
      {
        "href": "https://auto-reco.vercel.app/dashboard",
        "kind": "cta",
        "label": "View in dashboard",
      },
    ],
    "id": "link",
  },
]
`;

exports[`digest — model snapshot > threePart 1`] = `
[
  {
    "blocks": [
      {
        "kind": "para",
        "text": "26 July 2026 closed at 3pm. 503 units moved and we cannot place 9 of them. Another 187 are on the floor but written up wrong.",
      },
    ],
    "id": "opening",
  },
  {
    "blocks": [
      {
        "keys": [
          {
            "text": "All 4 records",
            "tone": "good",
          },
          {
            "text": "3 of 4",
            "tone": "normal",
          },
          {
            "text": "2 of 4",
            "tone": "warn",
          },
          {
            "text": "1 of 4",
            "tone": "danger",
          },
        ],
        "kind": "bars",
        "rows": [
          {
            "badge": {
              "text": "Guard ✓",
              "tone": "good",
            },
            "caption": "Delhi: 23 in all four · 62 in three · 29 in two · 36 in one · no gate register on 51 of them",
            "label": "Delhi",
            "segments": [
              {
                "tone": "good",
                "value": 23,
              },
              {
                "tone": "normal",
                "value": 62,
              },
              {
                "tone": "warn",
                "value": 29,
              },
              {
                "tone": "danger",
                "value": 36,
              },
            ],
            "sub": "150 moved",
          },
          {
            "badge": {
              "text": "Guard ✓",
              "tone": "good",
            },
            "caption": "Bangalore: 39 in all four · 56 in three · 18 in two · 18 in one · no delivery app on 61 of them · arriving units almost never do: 0 of 64, against 39 of 67 the other way",
            "label": "Bangalore",
            "segments": [
              {
                "tone": "good",
                "value": 39,
              },
              {
                "tone": "normal",
                "value": 56,
              },
              {
                "tone": "warn",
                "value": 18,
              },
              {
                "tone": "danger",
                "value": 18,
              },
            ],
            "sub": "131 moved",
          },
          {
            "badge": {
              "text": "No guard",
              "tone": "muted",
            },
            "caption": "Hyderabad: 0 in all four · 0 in three · 20 in two · 11 in one · no gate register on 31 of them",
            "label": "Hyderabad",
            "segments": [
              {
                "tone": "good",
                "value": 0,
              },
              {
                "tone": "normal",
                "value": 0,
              },
              {
                "tone": "warn",
                "value": 20,
              },
              {
                "tone": "danger",
                "value": 11,
              },
            ],
            "sub": "31 moved",
          },
        ],
      },
      {
        "kind": "para",
        "text": "28 July 2026 is the most recent day with all four records in — gate registers reach us about a day late.",
        "tone": "muted",
      },
    ],
    "id": "coverage",
    "title": "1 · Four-way check",
  },
  {
    "blocks": [
      {
        "columns": [
          {
            "label": "City",
          },
          {
            "align": "right",
            "label": "Units moved",
          },
          {
            "align": "right",
            "label": "At risk",
          },
          {
            "label": "vs last week",
          },
          {
            "label": "Guard register",
          },
        ],
        "kind": "table",
        "rows": [
          [
            {
              "text": "Delhi",
              "tone": undefined,
            },
            {
              "align": "right",
              "text": "147",
            },
            {
              "align": "right",
              "strong": true,
              "text": "5",
              "tone": "danger",
            },
            {
              "text": "—",
              "tone": "muted",
            },
            {
              "text": "Received",
              "tone": "muted",
            },
          ],
          [
            {
              "text": "Bangalore",
              "tone": undefined,
            },
            {
              "align": "right",
              "text": "121",
            },
            {
              "align": "right",
              "strong": true,
              "text": "4",
              "tone": "danger",
            },
            {
              "text": "—",
              "tone": "muted",
            },
            {
              "text": "Received",
              "tone": "muted",
            },
          ],
          [
            {
              "text": "Mumbai (week off)",
              "tone": "muted",
            },
            {
              "align": "right",
              "text": "172",
            },
            {
              "align": "right",
              "strong": false,
              "text": "0",
              "tone": undefined,
            },
            {
              "text": "—",
              "tone": "muted",
            },
            {
              "text": "Weekly off",
              "tone": "muted",
            },
          ],
        ],
      },
    ],
    "id": "cities",
    "title": "2 · At risk, by city",
  },
  {
    "blocks": [
      {
        "items": [
          {
            "sub": "Warehouse team",
            "text": "Off-System Movement — 7 units (Delhi 5, Bangalore 2). Odoo booked a customer movement today that nobody at the gate, on the sheet or in the app saw. Confirm the unit moved, or cancel the Odoo entry.",
            "tone": "danger",
          },
        ],
        "kind": "list",
      },
    ],
    "id": "actions",
    "title": "Do this today",
  },
  {
    "blocks": [
      {
        "kind": "para",
        "text": "Items raised in the last 7 days and still not settled, by the day they were raised.",
      },
      {
        "columns": [
          {
            "label": "City",
          },
          {
            "align": "right",
            "label": "24 Jul",
          },
          {
            "align": "right",
            "label": "25 Jul",
          },
          {
            "align": "right",
            "label": "26 Jul",
          },
          {
            "align": "right",
            "label": "27 Jul",
          },
          {
            "align": "right",
            "label": "28 Jul",
          },
          {
            "align": "right",
            "label": "Total",
          },
        ],
        "kind": "table",
        "rows": [
          [
            {
              "strong": true,
              "text": "Delhi",
            },
            {
              "align": "right",
              "heat": 4,
              "text": "12",
            },
            {
              "align": "right",
              "heat": 0,
              "text": "0",
            },
            {
              "align": "right",
              "heat": 1,
              "text": "1",
            },
            {
              "align": "right",
              "heat": 0,
              "text": "0",
            },
            {
              "align": "right",
              "heat": 1,
              "text": "1",
            },
            {
              "align": "right",
              "strong": true,
              "text": "14",
              "tone": "danger",
            },
          ],
          [
            {
              "strong": true,
              "text": "Bangalore",
            },
            {
              "align": "right",
              "heat": 2,
              "text": "3",
            },
            {
              "align": "right",
              "heat": 1,
              "text": "1",
            },
            {
              "align": "right",
              "heat": 0,
              "text": "0",
            },
            {
              "align": "right",
              "heat": 1,
              "text": "2",
            },
            {
              "align": "right",
              "heat": 0,
              "text": "0",
            },
            {
              "align": "right",
              "strong": true,
              "text": "6",
              "tone": "danger",
            },
          ],
          [
            {
              "strong": true,
              "text": "Pune",
            },
            {
              "align": "right",
              "heat": 0,
              "text": "0",
            },
            {
              "align": "right",
              "heat": 0,
              "text": "0",
            },
            {
              "align": "right",
              "heat": 2,
              "text": "3",
            },
            {
              "align": "right",
              "heat": 0,
              "text": "0",
            },
            {
              "align": "right",
              "heat": 0,
              "text": "0",
            },
            {
              "align": "right",
              "strong": true,
              "text": "3",
              "tone": "danger",
            },
          ],
          [
            {
              "text": "All cities",
              "tone": "muted",
            },
            {
              "align": "right",
              "strong": true,
              "text": "15",
              "tone": "muted",
            },
            {
              "align": "right",
              "strong": true,
              "text": "1",
              "tone": "muted",
            },
            {
              "align": "right",
              "strong": true,
              "text": "4",
              "tone": "muted",
            },
            {
              "align": "right",
              "strong": true,
              "text": "2",
              "tone": "muted",
            },
            {
              "align": "right",
              "strong": true,
              "text": "1",
              "tone": "muted",
            },
            {
              "align": "right",
              "strong": true,
              "text": "23",
            },
          ],
        ],
      },
    ],
    "id": "ageing",
    "title": "3 · Open more than two days",
  },
  {
    "blocks": [
      {
        "href": "https://auto-reco.vercel.app/dashboard",
        "kind": "cta",
        "label": "View in dashboard",
      },
    ],
    "id": "link",
  },
]
`;
